# plant-partner

./: .gitmodules  README.md
Documentation/3DPrints/: ReleaseCandidate_OnshapeLink.txt
Documentation/ClassSubmissions/: ClassSubmissionDocLinks.md
Documentation/Contributions/: TimeReport_AspenBoler.xlsx  TimeReport_CarterKreis.xlsx  TimeReport_FernandoAmado(2).xlsx  TimeReport_FernandoAmado.xlsx  TimeReport_NicholasCimino.xlsx  TimeReport_SabrinaLuu.xlsx
Documentation/Datasheets/: Adafruit MPM3610-eagle-import.kicad_sym
Documentation/Materials/: Bill of Materials.txt
Documentation/Mosquitto/: mosquitto.conf
Documentation/Reports/: 10_10_25_Boler.txt  10_10_Boler.md  10_10_Boler.txt  TimeReport_AspenBoler.xlsx  TimeReport_CarterKreis.xlsx  TimeReport_FernandoAmado.xlsx  TimeReport_NicholasCimino.xlsx  TimeReport_SabrinaLuu.xlsx
Documentation/Research/: ESP32CodeSetUp.txt
Documentation/TimeSheets/: .~lock.TimeReport_NicholasCimino.xlsx#  TimeReport_AspenBoler.xlsx  TimeReport_CarterKreis.xlsx  TimeReport_FernandoAmado.xlsx  TimeReport_NicholasCimino.xlsx  TimeReport_SabrinaLuu.xlsx
Documentation/pcbDesign/adafruitBuck/: Adafruit MPM3610-eagle-import.kicad_sym  Adafruit MPM3610.kicad_pcb  Adafruit MPM3610.kicad_pro  Adafruit MPM3610.kicad_sch
Documentation/pcbDesign/adafruitBuck2/: Adafruit MPM3610.kicad_pcb  Adafruit MPM3610.kicad_prl  Adafruit MPM3610.kicad_pro  fp-lib-table
Documentation/pcbDesign/buckConverter/: buckConverter-eagle-import.kicad_sym  buckConverter.kicad_prl  buckConverter.kicad_pro  buckConverter.kicad_sch  sym-lib-table
Documentation/pcbDesign/plantPartner_PCB1.0/: #auto_saved_files#  DRC.rpt  DigiKeyOrder_PCBv1.xlsx  _autosave-plantPartner_PCB1.0.kicad_sch  fp-info-cache  mapping.csv  plantPartner.kicad_sch  plantPartner_PCB1.0-B_Cu.gbl  plantPartner_PCB1.0-B_Mask.gbs  sym-lib-table  (+16 more)
backEndSrc/: .env  app.js  index.js  package-lock.json  package.json
backEndSrc/controller/: plantController.js  sensorController.js  taskController.js
backEndSrc/model/: plantModel.js  sensorModel.js  taskModel.js
backEndSrc/routes/: plantRoute.js  route.rest  sensorRoute.js  taskRoute.js  userdata.js
frontEndSrc/frontend/: pubspec.yaml
microSrc/: .gitignore  esp.py  espRun.sh
microSrc/scripts/: linux_setup.sh  mac_setup.sh  windows_setup.ps1
microSrc/src/: CMakeLists.txt  sdkconfig.old
microSrc/src/main/: CMakeLists.txt  main.c
pcbDesign/plantPartner_PCB1.0/: plantPartner_PCB1.0.kicad_prl  plantPartner_PCB1.0.kicad_pro  plantPartner_PCB1.0.kicad_sch
(+112 files in other folders)
