idf_component_register(
    SRCS 
        "main.c" 
        "../communication_protocols/http.c"
        "../peripherals/adc.c" 
        "../peripherals/gpio.c" 
        "../peripherals/heartbeat.c" 
        "../peripherals/pwm_pump.c"
        "../peripherals/uart_driver.c"
        "../wifi/wifi.c"
        "../communication_protocols/mqtt.c" 

    PRIV_REQUIRES 
        esp_adc
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_uart
        esp_event
        esp_http_client
        esp_http_server
        mqtt
        esp_system
        esp_timer
        esp-tls
        esp_wifi 
        freertos
        lwip
        nvs_flash
        spi_flash        

    INCLUDE_DIRS 
        "../communication_protocols"
        "../peripherals"
        "../wifi"
)
