idf_component_register(
    SRCS 
        "main.c" 
        "../peripherals/adc.c" 
        "../peripherals/gpio.c" 
        "../peripherals/heartbeat.c" 
        "../peripherals/pwm_pump.c"
        "../peripherals/uart_driver.c"
        "../peripherals/communication/http.c"
        "../peripherals/communication/mqtt.c"
        "../peripherals/communication/wifi.c"

    PRIV_REQUIRES 
        mqtt
        esp_adc
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_uart
        esp_event
        esp_http_client
        esp_http_server
        esp_system
        esp_timer
        esp-tls
        esp_wifi 
        freertos
        lwip
        nvs_flash
        spi_flash        

    INCLUDE_DIRS 
        "../peripherals"
)
