idf_component_register(
    SRCS 
        "main.c" 
        "../peripherals/adc.c" 
        "../peripherals/gpio.c" 
        "../peripherals/heartbeat.c" 
        "../peripherals/pwm_pump.c"
        "../peripherals/uart_driver.c"
        "../peripherals/communication/http.c"
        "../peripherals/communication/mqtt.c"
        "../peripherals/communication/wifi.c"
         "../peripherals/communication/ota.c"

    PRIV_REQUIRES 
        esp_adc
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_uart
        esp_event
        esp_http_client
        esp_http_server
        esp_system
        esp_timer
        esp-tls
        esp_wifi 
        freertos
        mqtt
        nvs_flash
        spi_flash        
        app_update
    INCLUDE_DIRS 
        "../peripherals"
)
